update favicon; add react-toastify dependency; enhance README with installation and usage instructions; implement utility functions for string normalization and clipboard operations

--- a/index.html
+++ b/index.html
@@ -2,7 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/webp" href="/favicon.webp" />
+    <link
+      rel="icon"
+      type="image/webp"
+      href="/favicon.webp"
+      style="background-size: cover"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Calendario F1 2025</title>
   </head>
