--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
       style="background-size: cover"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script
+      type="module"
+      src="https://cdn.jsdelivr.net/npm/@justinribeiro/lite-youtube@1/lite-youtube.min.js"
+    ></script>
     <title>Calendario F1 2025</title>
   </head>
   <body>
